<resources>
    <string name="app_name">DailyLogV2</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="registros">Registros</string>
    <string name="agregar_registro">Agregar registro</string>
    <string name="acerca_de_alpha_coders">Acerca de Alpha Coders</string>
    <string name="cerrar_sesi_n">Cerrar sesión</string>
    <string name="agregar_registro_fragment">Agregar Registro Fragment</string>
    <string name="agregar_cliente_nuevo">AGREGAR CLIENTE NUEVO</string>
    <string name="nombre">Nombre:</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="telefono">Telefono</string>
    <string name="correo">Correo</string>
    <string name="victor_outlook_com">victor@outlook.com</string>
    <string name="_1234567890">1234567890</string>
    <string name="correo2">Correo:</string>
    <string name="telefono2">Telefono:</string>
    <string name="victor_manuel_gastelum_huitzil">Victor Manuel Gastelum Huitzil</string>
    <string name="nombre2">Nombre:</string>
    <string name="todo">TODO</string>
    <string name="todo2">TODO</string>
    <string name="todo3">TODO</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>