<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.tec.dailylogv2.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.tec.dailylogv2.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.tec.dailylogv2.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_about"
        android:name="com.tec.dailylogv2.ui.about.AboutFragment"
        android:label="@string/acerca_de_alpha_coders"
        tools:layout="@layout/fragment_about" />

    <fragment
        android:id="@+id/nav_registros"
        android:name="com.tec.dailylogv2.ui.registros.RegistrosFragment"
        android:label="@string/registros"
        tools:layout="@layout/fragment_registros" />

    <fragment
        android:id="@+id/nav_agregar"
        android:name="com.tec.dailylogv2.ui.agregarRegistro.AgregarRegistroFragment"
        android:label="@string/agregar_registro"
        tools:layout="@layout/fragment_agregar_registro" />

    <fragment
        android:id="@+id/nav_cerrar_sesion"
        android:name="com.tec.dailylogv2.ui.cerrarSesion.CerrarSesionFragment"
        android:label="@string/cerrar_sesi_n"
        tools:layout="@layout/fragment_cerrar_sesion" />

</navigation>