<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    android:visibility="visible"
    app:cardCornerRadius="8dp"
    app:cardElevation="8dp"
    tools:visibility="visible">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="6dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvName"
                android:layout_width="180dp"
                android:layout_height="90dp"
                android:layout_weight="1"
                android:autoText="false"
                android:text="@string/victor_manuel_gastelum_huitzil"
                android:textColor="@color/black"
                android:textSize="20sp"
                app:autoSizeMaxTextSize="20sp"
                app:autoSizeMinTextSize="15sp"
                app:autoSizeTextType="uniform" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_gravity="right|top"
                android:gravity="right|top"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right|end"
                    android:gravity="right"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <ImageButton
                        android:id="@+id/imgBtnEdit"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/todo2"
                        app:srcCompat="@android:drawable/ic_menu_edit"
                        app:tint="#0027FF" />

                    <ImageButton
                        android:id="@+id/imgbtnDelete"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right|end"
                        android:backgroundTint="#FFFFFF"
                        android:contentDescription="@string/todo"
                        app:srcCompat="@android:drawable/ic_menu_delete"
                        app:tint="#FF0000" />
                </LinearLayout>

                <ImageView
                    android:id="@+id/imgBtnDiag"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:contentDescription="@string/todo3"
                    app:srcCompat="@mipmap/ic_eye_foreground"
                    app:tint="#000000" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/correo2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/victor_outlook_com"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/telefono2"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tvPhone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/_1234567890"
                android:textColor="@color/black"
                android:textSize="24sp" />

        </LinearLayout>


    </LinearLayout>

</androidx.cardview.widget.CardView>